--- a/UI/src/app/config/project-config/connection-list/connection-list.component.css
+++ b/UI/src/app/config/project-config/connection-list/connection-list.component.css
@@ -95,3 +95,7 @@ input[type="text"]:disabled, input[type="password"]:disabled {
     padding: .70rem;
     width: 150px;
 }
+
+:host ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item{
+    padding: 1rem 2rem;
+}
