--- a/UI/src/app/config/project-config/tool-menu/tool-menu.component.html
+++ b/UI/src/app/config/project-config/tool-menu/tool-menu.component.html
@@ -107,6 +107,10 @@
                                   <p><strong class="sub-text p-text-capitalize">{{ tool.toolName }}</strong></p>
                               </div>
                               <div class="p-md-4 inline-div">
+                                <p class="form_title p-text-capitalize">Tool Type</p>
+                                <p><strong class="sub-text p-text-capitalize">{{ tool.category }}</strong></p>
+                            </div>
+                              <div class="p-md-4 inline-div">
                                   <p class="form_title p-text-capitalize">Connection Name</p>
                                   <p><strong class="sub-text p-text-capitalize">{{ tool.connectionName ? tool.connectionName : '-' }}</strong></p>
                               </div>
