--- a/UI/src/app/config/project-config/tool-menu/tool-menu.component.html
+++ b/UI/src/app/config/project-config/tool-menu/tool-menu.component.html
@@ -76,7 +76,7 @@
               [loading]="generateTokenLoader" class="p-mt-0 p-mr-3" [disabled]="getAuthorizationService.checkIfViewer(selectedProject)" [style]="{'height':'2.5rem'}" pTooltip="You can generate the token to submit tools data via knowHOW POST APIs." tooltipPosition="top"></button>
               </div>
               <div class="p-d-flex">
-                  <div class="mar-t-10" *ngIf="isSuperAdmin === true || isProjectAdmin === true">
+                  <!-- <div class="mar-t-10" *ngIf="isSuperAdmin === true || isProjectAdmin === true">
                       <p-inputSwitch name="assigneeSwitch" id="assigneeSwitch" [(ngModel)]="isAssigneeSwitchChecked"
                           [disabled]="isAssigneeSwitchDisabled" (onChange)="onAssigneeSwitchChange($event)">
                       </p-inputSwitch>
@@ -87,7 +87,7 @@
                                   {{assigneeSwitchInfo}}
                               </div>' [escape]="false" tooltipPosition="bottom" tooltipStyleClass="inner-wraper"></span>
                       </label>
-                  </div>
+                  </div> -->
                   <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
               </div>
 
