--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
@@ -25,7 +25,7 @@
     </p-menu>
   </div>
   <!-- kpiFilter -->
-  <div [ngSwitch]="kpiData?.kpiDetail?.kpiFilter?.toLowerCase()" *ngIf="checkIfDataPresent(trendValueList) && kpiData?.kpiDetail?.isAdditionalFilterSupport;"
+  <div [ngSwitch]="kpiData?.kpiDetail?.kpiFilter?.toLowerCase()" *ngIf="checkIfDataPresent(trendValueList);"
     [ngClass]="{ 'hidden': selectedTab.toLowerCase() === 'developer' }" class="kpi-filter p-pr-5 p-pl-5"
     #kpiFilterContainer>
     <div *ngSwitchCase="'dropdown'" class="p-d-flex p-jc-end">
