--- a/UI/src/app/config/advanced-settings/advanced-settings.component.html
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.html
@@ -70,7 +70,7 @@
           <ng-template pTemplate="header">
             <tr>
               <th id="processorName">Processor Name</th>
-              <th id="processorName">Processor Category</th>
+              <th id="processorName">Processor Type</th>
               <th id="connectionName">Connection Name</th>
               <th id="executionTime">Last Executed On</th>
               <th></th>
