--- a/UI/src/app/config/project-config/project-settings/project-settings.component.html
+++ b/UI/src/app/config/project-config/project-settings/project-settings.component.html
@@ -217,7 +217,7 @@
   <p-footer>
     <button type="button" (click)="confirmToEnableDialog.reject()" pButton label="Cancel"
       class="enable-dialog-btn"></button>
-    <button type="button" (click)="confirmToEnableDialog.accept()" pButton label="Enable"></button>
+    <button type="button" (click)="confirmToEnableDialog.accept()" pButton label="Accept"></button>
   </p-footer>
 </p-confirmDialog>
 
