--- a/UI/src/app/config/advanced-settings/advanced-settings.component.css
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.css
@@ -47,6 +47,11 @@ div.main {
   border: 1px solid #ea6a47;
 }
 
+.status-container.pending {
+  background-color: #FFBF00;
+  border: 1px solid #FFBF00;
+}
+
 .status-container.active {
   background-color: #6ab187;
   border: 1px solid #6ab187;
