toast message handled

--- a/UI/src/app/config/project-config/project-settings/project-settings.component.html
+++ b/UI/src/app/config/project-config/project-settings/project-settings.component.html
@@ -15,7 +15,7 @@
   limitations under the License.
 
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-
+<p-toast [style]="{marginTop: '80px'}"></p-toast>
 <div class="main">
   <div class="p-d-flex p-jc-between p-align-center p-mb-5">
     <h1>Project Settings</h1>
