--- a/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
+++ b/UI/src/app/dashboardv2/executive-v2/executive-v2.component.html
@@ -254,6 +254,6 @@
 
 <app-export-excel #exportExcel></app-export-excel>
 
-<ng-container *ngIf="isRecommendationsEnabled && selectedtype?.toLowerCase() == 'scrum' && (filterApplyData?.label == 'project' || filterApplyData?.label == 'sprint') && filterApplyData?.ids?.length == 1">
+<ng-container *ngIf="isRecommendationsEnabled && selectedtype?.toLowerCase() == 'scrum' && projectCount <=2">
     <app-recommendations [filterData]="filterApplyData" [kpiList]="kpiList"></app-recommendations>
   </ng-container>
