--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -141,8 +141,10 @@
               [(ngModel)]="selectedDayType" (onChange)="setSelectedDateType($event.value)"></p-dropdown>
           </div>
           <div class="p-d-flex p-justify-end p-align-center btn-container">
-            <button pButton pRipple label="Apply" class="p-button-secondary p-button-sm btn-apply"
+            <button pButton pRipple label="Apply" class="p-button-secondary p-button-sm btn-apply p-mr-1"
               (click)="applyDateFilter()"></button>
+              <button pButton pRipple label="Cancel" class="p-button-secondary p-button-sm btn-apply"
+              (click)="closeDateFilterModel()"></button>
           </div>
         </div>
       </div>
