Capacity Planning final

--- a/UI/src/app/config/capacity-planning/capacity-planning.component.html
+++ b/UI/src/app/config/capacity-planning/capacity-planning.component.html
@@ -279,8 +279,8 @@
                                             <div class="p-d-flex p-justify-between p-align-center">
                                                 <div class="p-d-flex p-align-center">
                                                     <h3 class="color-grey">Added Users</h3>&nbsp;&nbsp;
-                                                    <p> (*If the desired Domain name is not visible, kindly contact us
-                                                        on knowhowfeedback@publicissapient.com)</p>
+                                                    <p> (*If the desired Domain name is not visible, kindly <br/> contact us
+                                                        on ''knowhowfeedback@publicissapient.com'')</p>
                                                 </div>
                                                 <p-button styleClass="p-button-secondary p-button-sm edit-button"
                                                     title="{{!isAdminForSelectedProject ? 'You are not an admin' : ''}}"
