tool type column added in tool-menu component

--- a/UI/src/app/config/project-config/tool-menu/tool-menu.component.html
+++ b/UI/src/app/config/project-config/tool-menu/tool-menu.component.html
@@ -108,6 +108,10 @@
                                   <p><strong class="sub-text p-text-capitalize">{{ tool.toolName }}</strong></p>
                               </div>
                               <div class="p-md-4 inline-div">
+                                <p class="form_title p-text-capitalize">Tool Type</p>
+                                <p><strong class="sub-text p-text-capitalize">{{ tool.category }}</strong></p>
+                            </div>
+                              <div class="p-md-4 inline-div">
                                   <p class="form_title p-text-capitalize">Connection Name</p>
                                   <p><strong class="sub-text p-text-capitalize">{{ tool.connectionName ? tool.connectionName : '-' }}</strong></p>
                               </div>
@@ -146,6 +150,7 @@
                   <div class="card__media__body">
                       <div class="card__primary__title">
                           <h4 class="card__primary__title__text">{{ tool.toolName }}</h4>
+                          <p class="card__primary__title__subtext">Tool Type: <strong>{{ tool.category }}</strong></p>
                           <p class="card__primary__title__subtext">Connection: <strong>{{ tool.connectionName ? tool.connectionName : '-' }}</strong></p>
                           <p class="card__primary__title__subtext">Last Updated:
                             <strong *ngIf="tool.updatedAt">{{ tool.updatedAt | date: 'dd-MMM-yyyy (EE) - h:mm a' }}</strong>
