--- a/UI/src/app/config/project-config/project-list/project-list.component.html
+++ b/UI/src/app/config/project-config/project-list/project-list.component.html
@@ -68,7 +68,12 @@
                         <div *ngIf="isAdminOrSuperAdmin" class="action-btns" (click)="deleteProject(project)"
                             [ngClass]="{'not-allowed': authorization.checkIfViewer(project)}">Delete Project</div> -->
                         <div *ngIf="isAdminOrSuperAdmin">
-                          <p-splitButton label="" icon="pi pi-cog" [model]="items" (onDropdownClick)="handleActionsClick(project)" styleClass="p-button-text"></p-splitButton>
+                          <ng-container *ngIf="!getAuthorizationService.checkIfViewer(project)">
+                            <p-splitButton label="" icon="pi pi-cog" [model]="items" (onDropdownClick)="handleActionsClick(project)" styleClass="p-button-text"></p-splitButton>
+                          </ng-container>
+                          <ng-container *ngIf="getAuthorizationService.checkIfViewer(project)">
+                            <p-splitButton label="" icon="pi pi-cog" [model]="roleBasedItems" (onDropdownClick)="handleActionsClick(project)" styleClass="p-button-text"></p-splitButton>
+                          </ng-container>
                         </div>
                     </div>
                 </td>
